# cookiecutter-django

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .env.template  .gitattributes  .gitignore  .gitlab-ci.yml  README.md  local.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.envs/.local/: .django
{{cookiecutter.project_slug}}/.envs/.production/: .django
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/compose/local/django/: Dockerfile
{{cookiecutter.project_slug}}/compose/production/django/: Dockerfile  entrypoint
{{cookiecutter.project_slug}}/config/: api_router.py  urls.py
{{cookiecutter.project_slug}}/config/settings/: base.py  local.py  production.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/common/: models.py  signals.py  tasks.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tickets/: admin.py  apps.py  signals.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tickets/api/: serializers.py  urls.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/tests/: test_models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: files.py
